v0.10.0 - Future
	+ Added Numerical Aware Comparison (numacomp) as a sorting option.
	+ Changes: various code updates

v0.9.5.1 - July 23, 2010
	+ Added dutch translation
	+ Bug: Mirage showed verbose output by default
	+ Bug: Misplaced parenthesis in Open Remote Image dialog code
	+ Changes: Fixed translations again...
	
v0.9.5 - July 20, 2010
	+ Added a windows icon
	+ Added new shortcuts PgUP/PgDN for previous/next image
	+ Added option to disable the backgroundcolor in windowed mode
	+ Bug: & in custom actions caused an error when mirage tried to open custom
		action dialog (bug #17329)
	+ Bug: Save image didn't work. (bug #17330)
	+ Bug: Fixed gettext files not found if installed into /usr/local (bug #17359)
	+ Changes: now uses $XDG_CONFIG_HOME/mirage as config directory if possible
		(patch taken from debian)
	+ Changes: Switched zooming directions for Ctrl+Mousewheel up/down.
	+ Changes: Small interface changes
	+ Changes: Updated mnemonics (bug #17350 and patch 3020)
	+ Changes: Improvements to localized strings
	
v0.9.4 - June 26, 2010
	+ Mirage now requires PyGTK 2.12.0
	+ Added the ability to set the quality for saving images
	+ Added windows support
	+ Fixed DeprecationWarnings for old tooltip API in pygtk
	+ Fixed DeprecationWarnings for md5
	+ Prevent toolbar from getting focus on keypresses
	+ Bug: Fix returning from fullscreen mode with no images displayed
	+ Bug: delete_image() could cause some thumbnails to not get loaded
	+ Bug: If a image modified image was deleted mirage would ask to save the image
	+ Bug: Hopefully fixed image preloading
	+ Bug: Fixed wrong tooltip for hidden images
	+ Bug: Some menu entries was visible while they shouldnt have been
	+ Bug: Fixed parsing of custom commands
	+ Changes: Properties now show "file modified" instead of "file date"
	+ Changes: Slideshow delay is choosen with a spinner
	+ Changes: Fixed DeprecationWarnings for old tooltip API in pygtk
	+ Changes: Fixed DeprecationWarnings for md5